--- a/LifeJourney/ToolTemplates.plist
+++ b/LifeJourney/ToolTemplates.plist
@@ -40,5 +40,16 @@
 		<key>items</key>
 		<array/>
 	</dict>
+	<key>writemultiple</key>
+	<dict>
+		<key>type</key>
+		<string>4</string>
+		<key>title</key>
+		<string></string>
+		<key>text</key>
+		<string></string>
+		<key>questions</key>
+		<array/>
+	</dict>
 </dict>
 </plist>
